--- a/dos33.html
+++ b/dos33.html
@@ -3204,8 +3204,8 @@ With that "legalese" out of the way ... enjoy the read!
 28CC:52 45 4E 41    022             DCI "RENAME"$
 28D0:4D C5
 28D2:43 41 54 41    023             DCI "CATALOG"$                                  ; <a class='dumb' name='HNTODAOS2'>HNTODAOS: #2</a> Let's slow users down forcing them type 7 characters
-28D6:4C 4F C7
-28D9:4D 4F CE       024             DCI "MON"                                       ; which has a higher error rate of typos instead of the easier to type 3 characters CAT or DIR
+28D6:4C 4F C7                                                                       ; Which has a higher error rate of typos?
+28D9:4D 4F CE       024             DCI "MON"                                       ; easier to type 3 characters CAT or DIR or 7 character CATALOG ?
 28DC:4E 4F 4D 4F CE 025             DCI "NOMON"$                                    ; /sarcasm Oh I see, we abbreviate the <i>uncomon</i> MONITOR but not the <b>common</b> CATALOG
 28E1:50 52 A3       026             DCI "PR#"
 28E4:49 4E A3       027             DCI "IN#"
@@ -3220,7 +3220,7 @@ With that "legalese" out of the way ... enjoy the read!
 2906:46 D9
 2908:00             035             DFB 0                                           ; end sentinel, see <span class='todo'>TODO</span>
                     036             PAGE
-                    037 ;                                                                   ; *sigh* Typical crap names; bitmask flags should be prefixed with a common name:
+                    037 ;                                                                   ; *sigh* Typical crap names; bitmask flags should be prefixed with common name:
                     038 ; COMMAND SYNTAX OP EQUATES FOR SYNTAX BYTE ONE                     ;     <span class='code'>P1_</span>     (better)
                     039 ;                                                                   ;     <span class='code'>PARAM1_</span> (best, but will concede a short name is extremely convenient)
                                                                                             ;
